apps-envs/mesh-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesh-demo
  namespace: mesh-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mesh-demo
  template:
    metadata:
      labels:
        app: mesh-demo
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.10.3
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
