apps-envs/mesh-demo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh-demo
  namespace: mesh-demo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mesh-demo
      backendRefs:
        - group: ""
          kind: Service
          name: mesh-demo
          port: 80
          weight: 1
